Attempts to align images in a grid but unable to find correct code to replicate given reference.

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-/* Base Styles */
 
 :root {
-    font-size: 10px;
+    cursor: default;
+    font-size: 50px;
 }
 
 *,
-*::before,
+*::before
 *::after {
     box-sizing: border-box;
 }
@@ -16,8 +16,145 @@ body {
     background-color: #fafafa;
     color: #262626;
     padding-bottom: 3rem;
+    margin: center;
 }
 
-img {
-    display: block;
+.profile {
+    margin: center;
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    border:solid 20px darkslategrey;
+    margin: center;
+    padding: 0.5rem;
+}
+
+.profile-username {
+    margin: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-edit-btn {
+    font-size: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
+}
+
+.profile-user-settings {
+    font-size: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 2.5rem;
+    cursor: pointer;
+}
+
+.profile-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3%;
+    padding-left: 5%; 
+}
+
+.profile-bio {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 3%;
+}
+
+.gallery-item {
+    margin: center;
+    width: 70%;
+    height: 40%;
+    display: grid;
+    grid-gap: 10rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 100px);
+    object-fit: square;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30%;
+    position: relative;
+    cursor: pointer;
+    padding-top: 20%;
+}
+.gallery-item-info {
+    color: black;
+    font-size: 20px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.gallery-image:hover .gallery-item-info{
+    opacity: 1;
+    cursor: pointer;
+}
+.gallery-item1 {
+    grid-row: 1/4;
+    grid-column: 1/3;
+    border-radius: 30%;
+}
+.gallery-item2 {
+    grid-row: 1/4;
+    grid-column: 2/3;
+    justify-self: stretch;
+}
+.gallery-item3 {
+    grid-row: 1/4;
+    grid-column: 3/3;
+    align-self: stretch;
+}
+.gallery-item4 {
+    grid-row: 2/4;
+    grid-column: 3/3;
+    align-self: end;
+}
+.gallery-item5 {
+    grid-row: 2/4;
+    grid-column: 2/3;
+}
+.gallery-item6 {
+    grid-row: 2/4;
+    grid-column: 3/3;
+}
+.gallery-item7 {
+    grid-row: 3/4;
+    grid-column: 1/3;
+}
+.gallery-item8 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+}
+.gallery-item9 {
+    grid-row: 3/4;
+    grid-column: 3/3;
+}
+.gallery-item10 {
+    grid-row: 4/4;
+    grid-column: 1/3;
+}
+.gallery-item11 {
+    grid-row: 4/4;
+    grid-column: 2/3;
+}
+.gallery-item12 {
+    grid-row: 4/4;
+    grid-column: 3/3;
 }
